<resources>
    <string name="app_name">AdvanceDiceRoller</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text_test">This is a welcome text to the Advance Dice Roller App</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_text">Welcome To Advance Dice Roller</string>
    <string name="first_name">First Name</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="sign_in_text">Sign In</string>
    <string name="history">History</string>
    <string name="game">Game</string>
    <string name="dice_image">Dice image</string>
    <string name="roll">Roll</string>
    <string name="_6">6</string>
    <string name="excellent">Excellent!</string>
</resources>